--- a/event-template/why.pug
+++ b/event-template/why.pug
@@ -27,7 +27,7 @@ html(lang="en")
 			.hero-body
 				.container
 					img.is-inline.logo.image.is-96x96(src="/images/dt_logo_rect_white.png")
-					h1.title #{no} reasons why you must attend DevTernity
+					h1.title #{no} reasons why best developers attend DevTernity
 					h2.subtitle or why missing DevTernity is a BAD idea
 		section.section
 			.container
@@ -164,6 +164,8 @@ html(lang="en")
 												h2.subtitle.is-size-6 #{a.job}
 		section.section
 			.container.has-text-centered
+				a.button.is-large(href=data.selfLink) Conference info
+				| &nbsp;
 				a.button.is-large.is-danger(href=data.register) Omg, count me in already!
 		footer.footer
 			.container
