--- a/event-template/why.pug
+++ b/event-template/why.pug
@@ -15,7 +15,7 @@ html(lang="en")
     link(rel="shortcut icon" type="image/png" href="images/logo_2017_filled.png")
     link(rel="icon" href="/images/favicon.png")
     link(rel="shortcut icon" sizes="64x64" href="/images/favicon.png")
-    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css")
     style
       | img.logo { margin: 20px }
       | .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
@@ -28,7 +28,7 @@ html(lang="en")
       .hero-body
         .container
           img.is-inline.logo.image.is-96x96(src="/images/dt_logo_rect_white.png")
-          h1.title #{no} reasons why best developers attend DevTernity
+          h1.title #{no} reasons why best devs attend DevTernity
           h2.subtitle or why missing DevTernity is a BAD idea
     section.section
       .container
@@ -37,6 +37,86 @@ html(lang="en")
             .tile.is-child
               p.title Trust the choice of architects and engineering leaders
               p 83% of conference attendees are top-level professionals — senior developers, software architects and engineering leaders. How they have become successful? They are great at making choices. The conference is an important choice that will influence your career. Trust those who is already at the top.
+              br
+              .card.is-shadowless
+                .card-content
+                  .media
+                    .media-left
+                      figure.image.is-48x48
+                        img.is-rounded(src="https://avatars.io/twitter/fmueller_bln")
+                    .media-content
+                      p.title.is-4 Felix Müller, Chief Architect
+                      p.subtitle.is-6 @fmueller_bln via 
+                        a(href="https://twitter.com/fmueller_bln/status/937354060440752129"): i.fab.fa-twitter
+                  .content 
+                    p Let me recap: an awesome first 
+                      a(href="https://twitter.com/devternity") @devternity 
+                      | ends now for me and 
+                      a(href="https://twitter.com/aquagen") @Aquagen
+                      | . High quality talks and a great venue. Highly recommendable next year. Thank you 
+                      a(href="https://twitter.com/eduardsi") @eduardsi 
+                      | and team of 
+                      a(href="https://twitter.com/search?q=%23devternity&src=typd") #devternity 
+                      | for organizing it 👍😊
+              .card.is-shadowless
+                .card-content
+                  .media
+                    .media-left
+                      figure.image.is-48x48
+                        img.is-rounded(src="https://avatars.io/twitter/aviranm")
+                    .media-content
+                      p.title.is-4 Aviran Mordo, Head of Engineering
+                      p.subtitle.is-6 @aviranm via 
+                        a(href="https://twitter.com/aviranm/status/936659963103137792/photo/1"): i.fab.fa-twitter
+                  .content 
+                    p Thank you 
+                      a(href="https://twitter.com/eduardsi") @eduardsi 
+                      | and 
+                      a(href="https://twitter.com/devternity") @devternity 
+                      | for a great conference, it was a blast!
+              .card.is-shadowless
+                .card-content
+                  .media
+                    .media-left
+                      figure.image.is-48x48
+                        img.is-rounded(src="https://avatars.io/twitter/evelgab")
+                    .media-content
+                      p.title.is-4 Evelina Gabasova, Trainer, F# and ML
+                      p.subtitle.is-6 @evelgab via 
+                        a(href="https://vimeo.com/247773795"): i.fab.fa-vimeo
+                  .content 
+                    p I think there should be more conferences like this. Everyone is really friendly and talks are really interesting!                    
+              .card.is-shadowless
+                .card-content
+                  .media
+                    .media-left
+                      figure.image.is-48x48
+                        img.is-rounded(src="https://avatars.io/twitter/rajwilkhu")
+                    .media-content
+                      p.title.is-4 Raj Singh, Technical Lead
+                      p.subtitle.is-6 @rajwilkhu via 
+                        a(href="https://twitter.com/rajwilkhu/status/936916292379983873"): i.fab.fa-twitter
+                  .content 
+                    p Thanks very much 
+                      a(href="https://twitter.com/eduardsi") @eduardsi
+                      | , the 
+                      a(href="https://twitter.com/devternity") @devternity 
+                      | team and the Dev community in Latvia for an amazing conference and after party. Looking forward to the next one! :-) 
+              .card.is-shadowless
+                .card-content
+                  .media
+                    .media-left
+                      figure.image.is-48x48
+                        img.is-rounded(src="https://avatars.io/twitter/ufried")
+                    .media-content
+                      p.title.is-4 Uwe Friedrichsen, CTO 
+                      p.subtitle.is-6 @ufried via 
+                        a(href="https://twitter.com/ufried/status/937578364050771968"): i.fab.fa-twitter
+                  .content 
+                    p 
+                      a(href="https://twitter.com/devternity") @devternity 
+                      | was a great experience! great conference, great people, great organization, great vibe. Really enjoyed it!  
+                      i.fas.fa-heart.has-text-danger
             .tile.is-child
               p.title Know more than your competitors
               p In just two days, you will learn much more than your competitors, who attend narrow-focused conferences. We focus on the core areas that are paramount to your success — software architecture, clean code and leadership. All noise is removed. Start preparing for the role of software architect, engineering leader or CTO today. 
@@ -49,7 +129,7 @@ html(lang="en")
               p We talk to our permanent attendees and many report increase in salary. Depending on the market, architects earn 25-70% than developers. Want to turn your 3K into 5K? Jump on the bus and learn things that matter.
             .tile.is-child
               p.title Enjoy perfect coffee by 
-                img.is-inline.image.is-96x96(src="/images/illy.png")
+                img.is-inline.image.is-64x64.is-rounded(src="/images/illy.png")
               p What's the best coffee on the planet? It's Illy. Illy coffees are blended from arabica beans from multiple sources. The grounds are packaged in steel canisters and pressurized with an inert gas rather than air. DevTernity runs on Illy. And, like all best things in life, it's free.
             .tile.is-child
               p.title We buy you a lunch
@@ -80,6 +160,10 @@ html(lang="en")
               p To have energy for all the things you want to achieve, you need to fill up at some point. 
                 b The search for the source of infinite energy is over. 
                 | DevTernity will recharge your batteries so you have fresh head, lots of inspiration and superpower. Enough to produce outstanding results and perform like a pro.
+                br
+                br
+                .embed-container
+                  iframe#video(name="video" src='https://player.vimeo.com/video/247773795' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen)
             .tile.is-child
               p.title Build great relationships with your teammates
               p What can be better than a warm, welcoming and trusting relationship in a team? DevTernity, attended together with peers, serves as a great teambuilding. Learning together, being challenged, and having fun after the conference will leave a long-lasting, positive impact on your team's health and productivity.
@@ -115,6 +199,8 @@ html(lang="en")
                 | throughout the year. You want to celebrate your efforts, don't you? Make yourself the Christmas present you deserve – 
                 b a ticket to the key tech conference of the year. 
                 | Life is too short to not do what makes you happy.
+                br
+                br
                 img.image(src="/images/present.jpg")
             .tile.is-child
               p.title The venue that will make your heart dance
@@ -122,11 +208,15 @@ html(lang="en")
                 | Bored of conferences that run in hotels, decorated with Soviet-style red carpets? Or spending the whole day in a dark cinema that make your eyes bleed? We feel your pain. Our venue, 
                 b the Castle of Light
                 |  – the winner of International Excellence Award 2018, is designed from scratch for stunning events. It's modern, light and has outstanding audio and video quality that will make your heart dance.
+                br
+                br
                 .embed-container
                   iframe#video(name="video" src='https://player.vimeo.com/video/265964598' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen)
             .tile.is-child
               p.title Enjoy a calm room
               p To restore a bit of mental and physical energy sapped by the active day, you can hide in a quiet room. No crowds, no talking, no disturbance. Just you and the sounds of singing birds. 
+                br
+                br
                 img(src="/images/quiet.jpg")
                 h6.has-text-centered.subtitle.is-6 Kevlin Henney polishing his opening keynote. DevTernity 2017.
             .tile.is-child
@@ -138,16 +228,22 @@ html(lang="en")
             .tile.is-child
               p.title Get your iPhone, PS4 or VR glasses. For free.
               p Every year, our participants win premium prices brought by our sponsors. Our sponsors are committed to make the event memorable. In fact, we work only with the sponsors who understand what developers like. Forget "exchange your email for a chocolate" type of things. Play big.
+                br
+                br
                 img.image(src="/images/prizes.jpg")
                 h6.has-text-centered.subtitle.is-6 Playstation winner at DevTernity 2016.                 
             .tile.is-child
               p.title Visit beautiful Riga
               p Riga, the capital of Latvia, is one of the top destinations in Europe and the largest of all three Baltic capitals. Art Nouveau architecture makes up roughly one third of all buildings, making Riga the city with the highest concentration of Art Nouveau architecture in the world. A must-see.
+                br
+                br
                 img.image(src="/images/riga.jpg")
                 h6.has-text-centered.subtitle.is-6 Panoramic view of evening Riga.
             .tile.is-child
               p.title Have fun      
               p After the conference, we enjoy unlimited supply of craft beer at Stargorod – the authentic Czech brewery. It's an amazing opportunity to meet old friends, teammates and, of course, argue with speakers until midnight.
+                br
+                br
                 img.image(src="/images/stargorod.jpg")
       .container
         .columns
@@ -164,10 +260,10 @@ html(lang="en")
                         h1.title.is-size-5 #{a.name}
                         h2.subtitle.is-size-6 #{a.job}
     section.section
-      .container.has-text-centered
-        a.button.is-large(href=data.selfLink) Conference info
-        | &nbsp;
-        a.button.is-large.is-danger(href=data.register) Omg, count me in already!
+      .container
+        .buttons.is-centered
+          a.button.is-large(href=data.selfLink) Conference info
+          a.button.is-large.is-danger(href=data.register) Omg, count me in already!
     footer.footer
       .container
         .content
