--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -29,7 +29,10 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
     |<![endif]-->
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js")
+    //- remove route after CDN expires
     script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-cookies.min.js")
+
     script(src="https://cdnjs.cloudflare.com/ajax/libs/angular-timer/1.3.3/angular-timer.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/skel/2.2.0/skel.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js")
