--- a/event-template/fellows.pug
+++ b/event-template/fellows.pug
@@ -76,8 +76,8 @@ html(lang="en")
                 p.subtitle Your current earnings
         p 
           | You can also convince your colleagues to go to DevTernity and 
-          b share profits
-          | .
+          b share profits 
+          i.fas.fa-users 
         .logged-only
           h3 How can I boost my earnings?
           p 
@@ -108,7 +108,49 @@ html(lang="en")
             a#ln.check.button.is-small(href="" target="_blank")
               .icon: i.fab.fa-linkedin-in
               span Share
-          .notification.is-info We recommend sharing the message on your timeline, in groups and pages. Don't forget to @mention friends!          
+          .notification.is-info We recommend sharing the message on your timeline, in groups and pages. Don't forget to @mention friends!
+          .field
+            input.is-checkradio.is-circle(type="checkbox" id="qucheck" name="qucheck" checked="checked")
+            label(for="qucheck") Recommend DevTernity on Quora
+            a.check.button.is-small(href="https://www.quora.com/What-are-the-best-developer-conferences-to-attend-in-2017-1" target="_blank")
+              .icon: i.fab.fa-quora
+              span Here
+            | &nbsp;
+            a.check.button.is-small(href="https://www.quora.com/What-are-the-best-tech-conferences-in-Europe" target="_blank")
+              .icon: i.fab.fa-quora
+              span Here
+            |  and   
+            a.check.button.is-small(href="https://www.quora.com/What-are-the-best-developer-conferences-to-attend-in-2018" target="_blank")
+              .icon: i.fab.fa-quora
+              span Here
+          .field
+            input.is-checkradio.is-circle(type="checkbox" id="meetup" name="meetup" checked="checked")
+            label(for="meetup") 
+              | Recommend on a  
+              a(href="https://meetup.com" target="_blank") Meetup.com
+              |  group
+          .field
+            input.is-checkradio.is-circle(type="checkbox" id="colleagues" name="colleagues" checked="checked")
+            label(for="colleagues") Recommend to your colleagues in a chat, corporate wiki or Yammer
+          .field
+            input.is-checkradio.is-circle(type="checkbox" id="gh" name="gh" checked="checked")
+            label(for="gh") Add DevTernity shield to you GitHub project:
+            br
+            br
+            img(src="https://devternity.com/shields/recommends.svg")
+            blockquote: code#ghRecommends
+            br
+            img(src="https://devternity.com/shields/fellow.svg")
+            blockquote: code#ghFellow
+          .field
+            input.is-checkradio.is-circle(type="checkbox" id="lg" name="lg" checked="checked")
+            label(for="lg") 
+              | Add 
+              a(href="https://github.com/devternity/graphics" target="_blank") DevTernity logo
+              |  to your website
+          .field
+            input.is-checkradio.is-circle(type="checkbox" id="blog" name="blog" checked="checked")
+            label(for="blog") Write a blog post            
         h3 How much can I earn?
         p The math is simple. You get 50 EUR per registered 2-day attendee. For a 1-day attendee, you get half the premium.
         .ct-chart
@@ -196,6 +238,8 @@ html(lang="en")
         $("#tw").attr('href', 'https://twitter.com/intent/tweet?text=The most waited tech conference of the year is coming. Are you in?&hashtags=techconference,tech,technology,devternity&url=' + theLink());
         $("#gp").attr('href', 'https://plus.google.com/share?url=' + theLink());
         $("#ln").attr('href', 'https://www.linkedin.com/shareArticle?mini=true&url=' + theLink() + '&title=DevTernity is coming! &summary=The most waited tech conference of the year is coming. Are you in?&source=');
+        $("#ghRecommends").text('[![DevTernity recommends](https://devternity.com/shields/recommends.svg)](' + theLink() + ')');
+        $("#ghFellow").text('[![DevTernity fellow](https://devternity.com/shields/fellow.svg)](' + theLink()  + ')');
         $('.anonym-only').addClass('is-hidden');
         $('.logged-only').removeClass('is-hidden');
         $('.step-item').addClass('is-completed');
