add links to fellowship program

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -145,6 +145,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
     header#header
       nav#nav
         ul
+          li: a(href="fellows.html" alt="Raise money") Become a Fellow 💰 
           li: a(href="code_of_conduct.html" alt="Code of Conduct") Code of Conduct
           each link, social in data.socials
             li
