--- a/event-template/fellows.pug
+++ b/event-template/fellows.pug
@@ -174,6 +174,10 @@ html(lang="en")
         p 
           a(href="mailto:fellows@devternity.com") fellows@devternity.com
           |  at your service 24/7.
+  section.section
+    .container
+      .buttons.is-centered
+        a.button.is-large(href="https://devternity.com") Back to the conference
   footer.footer
     .container
       .content
