--- a/event-template/why.pug
+++ b/event-template/why.pug
@@ -127,6 +127,11 @@ html(lang="en")
               p.title Get salary raise
               p We talk to our permanent attendees and many report increase in salary. Depending on the market, architects earn 25-70% than developers. Want to turn your 3K into 5K? Jump on the bus and learn things that matter.
             .tile.is-child
+              p.title Raise money
+              p We give an excellent opportunity to generate passive income to our loyal attendees. The rules are simple – you help friends and colleagues discover DevTernity. We pay you cash. Learn more about the program 
+                a(href="/fellows.html" target="_blank") here
+                | .
+            .tile.is-child
               p.title Enjoy perfect coffee by 
                 img.is-inline.image.is-64x64.is-rounded(src="/images/illy.png")
               p What's the best coffee on the planet? It's Illy. Illy coffees are blended from arabica beans from multiple sources. The grounds are packaged in steel canisters and pressurized with an inert gas rather than air. DevTernity runs on Illy. And, like all best things in life, it's free.
