--- a/event-template/why.pug
+++ b/event-template/why.pug
@@ -10,15 +10,27 @@ html(lang="en")
     meta(name="keywords" content="")
     meta(name="robots" content="index,follow")
     script(defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.min.js")
     script(src="https://connect.facebook.net/en_US/all.js#xfbml=1" async defer)
     link(rel="shortcut icon" type="image/png" href="images/logo_2017_filled.png")
     link(rel="icon" href="/images/favicon.png")
     link(rel="shortcut icon" sizes="64x64" href="/images/favicon.png")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css")
-    style
-      | img.logo { margin: 20px }
-      | .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
-      | .is-rounded { object-fit: cover; object-position: center center; height: 100%; width: 100% ;border-radius: 250983px }
+    style.
+      img.logo { margin: 20px }
+
+      .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; }
+
+      .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+      
+      .is-rounded { object-fit: cover; object-position: center center; height: 100%; width: 100% ;border-radius: 250983px }
+    script.
+      var url = window.location.href
+      var parts = url.split('r=')
+      if (parts.length > 1) {
+        var referral = parts[1];
+        Cookies.set('referral', referral);
+      }      
   body
     section.hero.is-info.is-bold
       .hero-head
