add more info on fellows

--- a/event-template/fellows.pug
+++ b/event-template/fellows.pug
@@ -157,11 +157,16 @@ html(lang="en")
         h3 What's the maximum earning?
         p There is no limit. The more people you bring, the more you earn. Simple and fair. 
         h3 How do I know how much I earned?
-        p Your balance will be visible just after authentication.
+        p Your balance will be visible just after authentication. You'll also receive email notifications.
         h3 How many days I have?
         p The program runs while the registration to the conference is open. After that, we'll stop the bonus program until the next conference and send you the money.
         h3 How do I collect my money?
         p We send you money using PayPal, Bitcoin or bank transfer. The choice is yours.
+        h3 What if a participant will discover DevTernity using my link, but registers later?
+        p
+          | Whenever someone visits your link, we set the unique and ageless browser cookie. All subsequent website visits
+          b  are your referrals
+          | .
         h3 Want to earn more?
         p 
           | Sure thing! Suggest your company to become a conference sponsor and earn up to 600 EUR. Just connect your manager and our team (sponsors@devternity.com) via email: 
