no sponsored tickets

--- a/event-template/fellows.pug
+++ b/event-template/fellows.pug
@@ -42,13 +42,13 @@ html(lang="en")
         .container
             img.is-inline.logo.image.is-96x96(src="/images/dt_logo_rect_white.png")
             h1.title DevTernity Fellows
-            h2.subtitle Easy way to raise money by inviting friends
+            h2.subtitle Get rewarded for inviting friends
   section.section
       .container.content
         h3 Why Fellows?
         p Have you heard about the passive income? Do you want to earn money by doing things that matter? Do you believe that sharing great things is caring? 
         p Then you also can become a member of DevTernity Fellows community. 
-        p At Fellows, you are paid for doing small things that make a big difference. You help friends and colleagues discover DevTernity. We pay you cash. 
+        p At Fellows, you are rewarded for doing small things that make a big difference. You help friends and colleagues discover DevTernity. We pay you cash. 
         p We believe that helping discover great events in a noisy world must be rewarding. Our fellows 
           b enjoy steady passive income since 2015.
         h3 How does it work?
@@ -167,6 +167,8 @@ html(lang="en")
           | Whenever someone visits your link, we set the unique and ageless browser cookie. All subsequent website visits
           b  are your referrals
           | .
+        h3 Any exceptions?
+        p Referral fees are not paid for sponsored tickets.
         h3 Want to earn more?
         p 
           | Sure thing! Suggest your company to become a conference sponsor and earn up to 600 EUR. Just connect your manager and our team (sponsors@devternity.com) via email: 
