remove Kotlin workshop

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -189,7 +189,9 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
           header
             h2
             p 
-              | DevTernity is the top tech conference in Latvia, ranked among Top 20 tech conferences in Europe.
+              | DevTernity is the premium tech conference in Latvia, 
+              a(href="//itconference.top" target="_blank") ranked
+              |  among the Top 3 cross-discipline conferences in Europe.
             h2
             p 
               | We turn developers into architects and engineering leaders since 2015.
