--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -8,7 +8,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
     meta(name="author" content="DevTernity")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
     meta(name="google-site-verification" content="b0JWvPtZAQJNl2DMy0flSRjC7xxN9g10Yhu_hSszLLw")
-    meta(name="description" content="The top tech conference in Europe. We turn developers into architects and engineering leaders since 2015.")
+    meta(name="description" content="The top #3 cross-discipline tech conference in Europe. We turn developers into architects and engineering leaders since 2015.")
     meta(name="keywords" content="software craftsmanship conferences, software development conferences, software developer conferences, developer conference, java conferences")
     meta(name="robots" content="index,follow")
     meta(property="og:url" content="http://devternity.com")
@@ -189,9 +189,8 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
           header
             h2
             p 
-              | DevTernity is the premium tech conference in Latvia, 
-              a(href="//itconference.top" target="_blank") ranked
-              |  among the Top 3 cross-discipline conferences in Europe.
+              | DevTernity is the premium tech conference in Latvia and 
+              a(href="//itconference.top" target="_blank"): em  the top 3 cross-discipline conferences in Europe.
             h2
             p 
               | We turn developers into architects and engineering leaders since 2015.
