--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -162,7 +162,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
           h2 &nbsp;DevTernity
 
         p=data.desc
-        p #{data.date}. #{data.city}, #{data.country}.
+        p #{data.date}. #{data.city}, #{data.venue_name}.
         ul.actions
           if data.status == "on_sale"
             li
