--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -145,7 +145,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
     header#header
       nav#nav
         ul
-          li: a(href="fellows.html" alt="Raise money") Become a Fellow 💰 
+          li: a(href="fellows.html" alt="Affiliates") Affiliates 💰 
           li: a(href="code_of_conduct.html" alt="Code of Conduct") Code of Conduct
           each link, social in data.socials
             li
@@ -189,8 +189,9 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
           header
             h2
             p 
-              | DevTernity is the premium tech conference in Latvia and 
-              a(href="//itconference.top" target="_blank"): em  the top 3 cross-discipline conferences in Europe.
+              | DevTernity is 
+              a(href="//itconference.top" target="_blank"): em the top 3
+              |  international software development conference in Europe.
             h2
             p 
               | We turn developers into architects and engineering leaders since 2015.
@@ -203,7 +204,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
               |  and 
               em leadership
               | . All noise is removed and can be learned elsewhere.
-          a.button(href="why.html") 25 reasons why devs choose DevTernity
+          a.button(href="why.html") 25 reasons why DevTernity rocks
           br
           br
         .fb-like(data-width="320px" data-href="https://www.facebook.com/devternity" data-layout="standard" data-action="like" data-show-faces="true" style="min-height: 100px")
